--- a/examples/bubbles/index.html
+++ b/examples/bubbles/index.html
@@ -10,12 +10,13 @@
       width: 100%;
       height: 100%;
       margin: 0;
+      overflow: hidden;
     }
   </style>
 </head>
 
 <body>
-  <canvas id="main" width="800px" height="600px"></canvas>
+  <canvas id="main" width="1920px" height="1080px"></canvas>
   <script type="text/javascript" src="app.js"></script>
 </body>
 </html>
